Removed navbar and footer on mobile phones in landscape mode https://github.com/Memba/Memba-Blog/issues/92

--- a/styles/app.page.error.less
+++ b/styles/app.page.error.less
@@ -7,10 +7,26 @@
     .wrapper();
 }
 
+
+/*********************************************
+ * Small screens
+ ********************************************/
+@media (max-height: 500px) {
+    header.hidden-print {
+        display:none !important;
+    }
+    #error-wrapper {
+        top: 0;
+        bottom: 0;
+    }
+    footer.hidden-print {
+        display:none !important;
+    }
+}
+
 /*********************************************
  * Printing
  ********************************************/
-
 // See http://getbootstrap.com/css/#responsive-utilities-print
 @media print {
     //Reposition content for hiding header, footer and toolbar
