--- a/styles/app.page.home.less
+++ b/styles/app.page.home.less
@@ -56,6 +56,22 @@
 }
 
 /*********************************************
+ * Small screens
+ ********************************************/
+@media (max-height: 500px) {
+    header.hidden-print {
+        display:none !important;
+    }
+    #home-wrapper {
+        top: 0;
+        bottom: 0;
+    }
+    footer.hidden-print {
+        display:none !important;
+    }
+}
+
+/*********************************************
  * Printing
  ********************************************/
 
